--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot[job-queue]==21.0.1
-httpx
-pytz
-google-generativeai
+python-telegram-bot==21.0.1
+google-api-python-client
+google-auth-oauthlib
 dateparser
+google-generativeai
