--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot==21.0.1
-google-api-python-client
-google-auth-oauthlib
-dateparser
-google-generativeai
+python-telegram-bot==20.7
+structlog==23.1.0
+pytz==2023.3
+dateparser==1.1.8
+requests==2.31.0
