--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 python-telegram-bot==20.7
-structlog==23.1.0
-pytz==2023.3
-dateparser==1.1.8
-requests==2.31.0
 google-auth==2.23.0
 google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.0
 google-api-python-client==2.100.0
+google-generativeai==0.3.2
+pytz==2023.3
